--- a/frontend/assets/css/global.css
+++ b/frontend/assets/css/global.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap");
+@import url("https://cdn.boxicons.com/3.0.5/fonts/basic/boxicons.min.css");
+@import url("https://cdn.boxicons.com/3.0.5/fonts/brands/boxicons-brands.min.css");
+
+@import "./components/button.css";
+@import "./components/image.css";
+@import "./components/logo.css";
+@import "./components/boxicon.css";
 
 :root {
   --color-primary: #c1011a;
@@ -37,15 +44,21 @@
   --radius-md: 8px;
   --radius-lg: 12px;
   --radius-xl: 16px;
-  --radius-full: 9999px;
+  --radius-2xl: 50px;
+  --radius-3xl: 75px;
+  --radius-full: 50%;
 
-  --transition-fast: all 0.15s ease-in-out;
-  --transition-medium: all 0.25s ease;
-  --transition-slow: all 0.5s ease;
+  --transition-fast: all 0.25s ease-in-out;
+  --transition-medium: all 0.5s ease;
+  --transition-slow: all 1s ease;
 
-  --cursor-default: url("../res/cursors/default-cursor.svg") 4 4, auto;
-  --cursor-pointer: url("../res/cursors/pointer-cursor.svg") 4 4, pointer;
-  --cursor-text: url("../res/cursors/type-cursor.svg") 4 12, text;
+  --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
+  --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.15);
+
+  --cursor-default: url("../res/cursors/default.cur") 1 1, auto;
+  --cursor-pointer: url("../res/cursors/pointer.cur") 11 0, pointer;
+  --cursor-text: url("../res/cursors/text.cur") 15 15, text;
 }
 
 * {
@@ -75,20 +88,22 @@ body {
   width: 100svw;
   min-height: 100svh;
   font-family: var(--font-sans);
+  font-size: var(--size-base);
   background: var(--color-primary);
+  font-weight: 400;
+  line-height: 1.5;
   color: var(--neutral-800);
   overflow-x: hidden;
-  padding: 0 2%;
-  display: flex;
-  flex-direction: column;
   scroll-behavior: smooth;
   position: relative;
+  display: flex;
+  flex-direction: column;
   cursor: var(--cursor-default);
-}
+  scrollbar-gutter: stable both-edges;
 
-iframe {
-  width: 100%;
-  height: 100%;
+  &.home {
+    padding: 0 2%;
+  }
 }
 
 h1,
@@ -124,9 +139,15 @@ h5 {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+i.bx,
+a,
+button {
   cursor: var(--cursor-pointer);
 }
 
+.input-container,
 input[type="text"],
 input[type="email"],
 input[type="password"],
@@ -134,121 +155,8 @@ textarea {
   cursor: var(--cursor-text);
 }
 
-#header,
-#footer {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: var(--pad-md) 0;
-  justify-content: space-between;
-  color: var(--color-primary);
-  background: var(--color-primary);
-}
-
-#main-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  border-radius: var(--radius-lg);
-  background: var(--neutral-100);
-  position: relative;
-  overflow: hidden;
-
-  & #main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-h1.logo {
-  color: var(--neutral-100);
-  cursor: pointer;
-  background-clip: text;
-}
-
-img.logo {
-  aspect-ratio: 1/1;
-  width: auto;
-  height: 15rem;
-  cursor: pointer;
-  transition: var(--transition-fast);
-
-  &:hover {
-    transform: scale(1.05) rotate(5deg);
-    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
-  }
-
-  &:active {
-    transform: scale(0.95);
-  }
-}
-
-.img-container {
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  border-radius: var(--radius-md);
-
-  & img {
-    aspect-ratio: 3/4;
-    width: auto;
-    height: 100%;
-    object-fit: contain;
-
-    &:hover {
-      transform: scale(1.05);
-    }
-  }
-}
-
-.btn {
-  padding: 0.8rem var(--pad-lg);
-  border-radius: var(--radius-md);
-  font-weight: 700;
-  font-size: var(--size-base);
-  cursor: pointer;
-  border: none;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  display: inline-block;
-  text-align: center;
-  cursor: var(--cursor-pointer);
-  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2), 0 3px 2px rgba(0, 0, 0, 0.1);
-
-  &:hover {
-    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.3), 0 3px 2px rgba(0, 0, 0, 0.1);
-  }
-
-  &:active {
-    transform: translateY(1px);
-    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.2), 03px 2px rgba(0, 0, 0, 0.1);
-  }
-
-  &:disabled {
-    background: var(--neutral-200);
-    color: var(--neutral-400);
-    cursor: not-allowed;
-  }
-}
-
-.btn-primary {
-  background: var(--color-secondary);
-  color: var(--neutral-100);
-
-  &:hover {
-    background: var(--color-secondary-light);
-  }
-}
-
-.btn-secondary {
-  background: var(--neutral-200);
-  color: var(--color-primary);
-
-  &:hover {
-    background: var(--neutral-100);
+@media screen and (max-width: 768px) {
+  body::-webkit-scrollbar {
+    display: none;
   }
 }
