--- a/frontend/assets/css/components/main.css
+++ b/frontend/assets/css/components/main.css
@@ -3,15 +3,16 @@
   flex-direction: column;
   border-radius: var(--radius-lg);
   background: var(--neutral-100);
-  position: relative;
   overflow: hidden;
+  width: 100%;
 
   & .main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 85svh;
+    min-height: 86svh;
     position: relative;
+    width: 100%;
 
     & .main-section {
       width: 100%;
