--- a/frontend/assets/css/components/header.css
+++ b/frontend/assets/css/components/header.css
@@ -36,4 +36,13 @@
   .header .actions {
     gap: var(--pad-sm);
   }
+
+  .header-page {
+    background: var(--neutral-100);
+    border-bottom: 2px solid var(--neutral-200);
+
+    & .context {
+      color: var(--neutral-800);
+    }
+  }
 }
