--- a/frontend/assets/css/components/navbar.css
+++ b/frontend/assets/css/components/navbar.css
@@ -11,7 +11,8 @@
   padding: var(--pad-md) var(--pad-xs);
   gap: var(--pad-md);
   background: var(--neutral-100);
-  z-index: 100;
+  border-right: 2px solid var(--neutral-200);
+  z-index: 1050;
 
   & .nav-hr {
     width: 50%;
@@ -53,6 +54,15 @@
         & .page-label {
           display: inline-block;
           visibility: visible;
+          position: absolute;
+          top: 0;
+          left: 150%;
+          background: var(--neutral-100);
+          height: 100%;
+          padding: var(--size-sm) var(--size-xl);
+          border-radius: 0 var(--radius-md) var(--radius-md) 0;
+          border-left: 5px solid var(--color-secondary);
+          box-shadow: var(--shadow-sm);
         }
       }
 
@@ -86,16 +96,7 @@
       & .page-label {
         display: none;
         visibility: hidden;
-        position: absolute;
-        top: 0;
-        left: 150%;
-        background: var(--neutral-100);
-        height: 100%;
-        padding: var(--size-sm) var(--size-xl);
-        border-radius: 0 var(--radius-md) var(--radius-md) 0;
-        border-left: 5px solid var(--color-secondary);
         font-weight: 600;
-        box-shadow: var(--shadow-sm);
       }
     }
 
@@ -105,6 +106,73 @@
 
     &#more {
       flex: 1;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    position: fixed;
+    height: 5rem;
+    width: 100svw;
+    top: unset;
+    bottom: 0;
+    padding: var(--pad-sm) var(--pad-xs);
+    border-right: none;
+    border-top: 2px solid var(--neutral-200);
+
+    & .nav-hr,
+    & .logo {
+      display: none;
+      visibility: hidden;
+    }
+
+    & .pages-container {
+      flex-direction: row;
+      justify-content: space-around;
+      height: 100%;
+
+      & .page-container {
+        flex-direction: column;
+        width: unset;
+        height: 100%;
+
+        &.active-page {
+          & .page-label {
+            color: var(--neutral-100);
+          }
+        }
+
+        &.hide-page {
+          display: flex;
+          visibility: visible;
+        }
+
+        &:hover {
+          & .page-label {
+            display: none;
+            visibility: hidden;
+          }
+        }
+
+        & .page-label {
+          display: inline-block;
+          visibility: visible;
+          font-size: var(--size-xs);
+        }
+      }
+
+      &#more,
+      &#account {
+        width: unset;
+        flex: unset;
+      }
+
+      &#more-expanded,
+      &#account-expanded {
+        display: none;
+        visibility: hidden;
+      }
     }
   }
 }
