--- a/frontend/assets/css/pages/home/login.css
+++ b/frontend/assets/css/pages/home/login.css
@@ -3,15 +3,11 @@
 @import "../../components/main.css";
 @import "../../components/form.css";
 
-.main {
-  justify-content: center;
-}
-
 .forms-container {
   position: relative;
-  width: 97.5%;
-  min-height: 80svh;
-  border-radius: var(--radius-xl);
+  width: 100%;
+  min-height: 85svh;
+  border-radius: var(--radius-lg);
   overflow: hidden;
   background: var(--neutral-200);
 
@@ -81,7 +77,7 @@
       left: -250%;
       width: 300%;
       height: 100%;
-      background: var(--color-primary);
+      background: var(--color-secondary);
       border-radius: var(--radius-3xl);
       z-index: 200;
       box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.2);
@@ -172,7 +168,6 @@
     & .form-container {
       width: 100%;
       height: 70%;
-      /* background: black; */
       bottom: 0;
       top: unset;
     }
