--- a/frontend/assets/css/pages/home/register.css
+++ b/frontend/assets/css/pages/home/register.css
@@ -9,9 +9,9 @@
 
 .forms-container {
   position: relative;
-  width: 97.5%;
-  min-height: 80svh;
-  border-radius: var(--radius-xl);
+  width: 100%;
+  min-height: 85svh;
+  border-radius: var(--radius-lg);
   overflow: hidden;
   background: var(--neutral-200);
 
@@ -81,7 +81,7 @@
       left: -250%;
       width: 300%;
       height: 100%;
-      background: var(--color-primary);
+      background: var(--color-secondary);
       border-radius: var(--radius-3xl);
       z-index: 200;
       box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.2);
@@ -172,7 +172,6 @@
     & .form-container {
       width: 100%;
       height: 70%;
-      /* background: black; */
       bottom: 0;
       top: unset;
     }
