--- a/frontend/assets/css/pages/branch/menu.css
+++ b/frontend/assets/css/pages/branch/menu.css
@@ -2,7 +2,7 @@
 @import "../../components/header.css";
 @import "../../components/main.css";
 @import "../../components/page.css";
-@import "../../components/tab.css";
+@import "../../components/tab-1.css";
 @import "../../components/kpi.css";
 @import "../../components/filter.css";
 
