--- a/frontend/assets/css/pages/branch/activity.css
+++ b/frontend/assets/css/pages/branch/activity.css
@@ -3,3 +3,4 @@
 @import "../../components/main.css";
 @import "../../components/page.css";
 @import "../../components/tab.css";
+@import "../../components/table.css";
