--- a/frontend/assets/css/components/form.css
+++ b/frontend/assets/css/components/form.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--pad-xl);
+  gap: var(--pad-lg);
   width: 100%;
 
   & .input-container {
@@ -21,7 +21,6 @@
 
     &:focus-within {
       border: 2px solid var(--color-secondary);
-      box-shadow: var(--shadow-sm);
     }
 
     & input {
