--- a/frontend/assets/css/pages/home/register.css
+++ b/frontend/assets/css/pages/home/register.css
@@ -81,7 +81,7 @@
       left: -250%;
       width: 300%;
       height: 100%;
-      background: var(--color-secondary);
+      background: var(--color-primary);
       border-radius: var(--radius-3xl);
       z-index: 200;
       box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.2);
