--- a/assets/css/components/form.css
+++ b/assets/css/components/form.css
@@ -8,7 +8,7 @@
   & .input-container {
     position: relative;
     width: 100%;
-    border: 2px solid transparent;
+    border: 2px solid var(--neutral-400);
     padding: var(--pad-md) var(--pad-lg);
     border-radius: var(--radius-md);
     display: flex;
