--- a/assets/css/components/main.css
+++ b/assets/css/components/main.css
@@ -33,6 +33,14 @@
       scrollbar-gutter: stable;
       overflow-y: auto;
       overflow-x: hidden;
+
+      & .main-section {
+      width: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     }
   }
 }
