--- a/assets/css/components/tab.css
+++ b/assets/css/components/tab.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100svh;
   position: relative;
+  overflow: hidden;
 
   & input[type="radio"] {
     display: none;
@@ -16,6 +17,8 @@
     background: var(--neutral-100);
     padding: var(--pad-md);
     border-bottom: 2px solid var(--neutral-200);
+    overflow-x: hidden;
+    overflow-y: auto;
 
     & .tab {
       padding: var(--size-sm) var(--size-2xl);
@@ -76,7 +79,4 @@
 }
 
 @media screen and (max-width: 768px) {
-  .tab-container {
-    overflow: auto;
-  }
 }
