--- a/assets/css/pages/branch/account.css
+++ b/assets/css/pages/branch/account.css
@@ -2,5 +2,28 @@
 @import "../../components/header.css";
 @import "../../components/main.css";
 @import "../../components/page.css";
-@import "../../components/tab.css";
-@import "../../components/table.css";
+@import "../../components/form.css";
+
+.main {
+    & .form-container {
+    width: 100svw;
+    padding: var(--pad-xl) 5%;
+
+    & .account-field {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: var(--pad-sm);
+    }
+
+    & .account-actions {
+        width: 100%;
+        display: flex;
+        gap: var(--pad-md);
+
+        & .btn {
+            flex: 1;
+        }
+    }
+}
+}
