--- a/assets/css/pages/home/login.css
+++ b/assets/css/pages/home/login.css
@@ -3,6 +3,10 @@
 @import "../../components/main.css";
 @import "../../components/form.css";
 
+.main-comtainer {
+  flex: 0;
+}
+
 .forms-container {
   position: relative;
   width: 100%;
