--- a/assets/css/components/tab.css
+++ b/assets/css/components/tab.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100svh;
   position: relative;
-  overflow: hidden;
 
   & input[type="radio"] {
     display: none;
@@ -13,12 +12,13 @@
     position: sticky;
     top: 0;
     display: flex;
+    width: 100svw;
     gap: var(--pad-md);
     background: var(--neutral-100);
     padding: var(--pad-md);
     border-bottom: 2px solid var(--neutral-200);
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
 
     & .tab {
       padding: var(--size-sm) var(--size-2xl);
