--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -107,7 +107,7 @@ body {
   scrollbar-gutter: stable both-edges;
 
   &.home {
-    padding: 0 2%;
+    padding: 0 2% 2%;
     flex-direction: column;
   }
 
