--- a/assets/css/pages/branch/settings.css
+++ b/assets/css/pages/branch/settings.css
@@ -2,3 +2,4 @@
 @import "../../components/header.css";
 @import "../../components/main.css";
 @import "../../components/page.css";
+@import "../../components/settings.css";
