--- a/assets/css/pages/customer/account.css
+++ b/assets/css/pages/customer/account.css
@@ -2,3 +2,5 @@
 @import "../../components/header.css";
 @import "../../components/main.css";
 @import "../../components/page.css";
+@import "../../components/form.css";
+@import "../../components/profile.css";
