--- a/assets/css/components/profile.css
+++ b/assets/css/components/profile.css
@@ -1,6 +1,6 @@
 .main {
     & .form-container {
-        width: 100svw;
-        padding: var(--pad-xl) 5%;
+        width: 100%;
+        padding: var(--pad-md);
     }
 }
