--- a/assets/css/pages/branch/activity.css
+++ b/assets/css/pages/branch/activity.css
@@ -4,3 +4,4 @@
 @import "../../components/page.css";
 @import "../../components/tab.css";
 @import "../../components/table.css";
+@import "../../components/receipt.css";
