--- a/assets/css/components/button.css
+++ b/assets/css/components/button.css
@@ -12,6 +12,10 @@
   gap: var(--pad-sm);
   box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2), 0 3px 2px rgba(0, 0, 0, 0.1);
 
+  & .btn-label {
+    white-space: nowrap;
+  }
+
   &:has(.btn-label + .btn-icon) {
     & .btn-label {
       visibility: visible;
@@ -29,7 +33,7 @@
   }
 
   &:active {
-    transform: translateY(1px);
+    transform: translateY(2px);
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.2), 03px 2px rgba(0, 0, 0, 0.1);
   }
 
