--- a/assets/css/components/receipt.css
+++ b/assets/css/components/receipt.css
@@ -1,3 +1,113 @@
 .receipt {
-    
+  display: flex;
+  flex-direction: column;
+  gap: var(--pad-md);
+  padding: var(--pad-md);
+  width: 100%;
+  position: relative;
+
+  & .receipt-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--pad-sm);
+
+    &.highlight {
+      background: var(--neutral-200);
+      border-radius: var(--radius-lg);
+      padding: var(--pad-md);
+      text-align: center;
+      border: 2px solid var(--neutral-200);
+      box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 rgba(0, 0, 0, 0.1);
+
+      & p.status,
+      & p.total {
+        font-weight: 700;
+        font-size: var(--size-lg);
+        color: var(--color-primary);
+      }
+
+      & h4 {
+        font-size: var(--size-2xl);
+      }
+
+      & p.date {
+        font-size: var(--size-sm);
+        color: var(--neutral-400);
+      }
+
+      &:hover {
+        background: var(--neutral-100);
+          box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.3), 0 3px 2px rgba(0, 0, 0, 0.1);
+      }
+
+      &:active {
+        transform: translateY(2px);
+        box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.2), 0 3px 2px rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    & .section-title {
+        width: 100%;
+      display: flex;
+      align-items: center;
+      gap: var(--pad-md);
+
+      & h5 {
+        font-size: var(--size-xl);
+        font-weight: 800;
+        white-space: nowrap;
+      }
+
+      & .title-line {
+        height: 2px;
+        flex-grow: 1;
+        background: var(--neutral-200);
+      }
+    }
+
+    & .section-content {
+        width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: var(--pad-sm);
+
+      & .item-row,
+      & .payment-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        & .left {
+          max-width: 70%;
+          font-size: var(--size-base);
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        & .right {
+          font-weight: 700;
+          font-size: var(--size-base);
+        }
+      }
+
+      & .label-row {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+
+        & label {
+          font-size: var(--size-sm);
+          color: var(--neutral-400);
+        }
+
+        & p {
+          font-size: var(--size-base);
+          font-weight: 600;
+        }
+      }
+    }
+  }
 }
