--- a/assets/css/pages/customer/activity.css
+++ b/assets/css/pages/customer/activity.css
@@ -2,3 +2,6 @@
 @import "../../components/header.css";
 @import "../../components/main.css";
 @import "../../components/page.css";
+@import "../../components/tab.css";
+@import "../../components/table.css";
+@import "../../components/receipt.css";
